1.1.13i4:
    Core, Setup, etc.:
    * new tool 'livedump' for dumping configuration and status
      information from one monitoring core and importing this
      into another.

    WATO:
    * Distributed WATO: Made all url calls using curl now
    * FIX: fix bug in inventory in validate_datatype()
    * Better output in case of inventory error
    * FIX: fix bug in host_icon rule on non OMD
    * FIX: do not use isdisjoint() (was in rule editor on Lenny)

    Checks & Agents:
    * hpux_if: fix missing default parameter errors
    * hpux_if: make configurable via WATO
    * if.include: fix handling of NIC with index 0
    * hpux_lunstats: new check for disk IO on HP-UX
    * windows - mk_oracle tablespace: Added missing sid column
    * diskstat: make inventory mode configurable via WATO
    * added new checks for Fujitsu ETERNUS DX80 S2 
      (thanks to Philipp Höfflin)
    * Fix Perf-O-Meter of fileage
    * hpux_snmp_cs.cpu: new SNMP check for CPU utilization
      on HP-UX.
    * if/if64: inventory also picks up type 62 (fastEther). This
      is needed on Cisco WLC 21xx series (thanks to Ralf Ertzinger)
    * FIX: fix inventory of f5_bigip_temp

    Multisite:
    * Added several missing localization stringsw
    * IE: Fixed problem with clicking SELECT fields in the new wato foldertree snapin
    * Fixed problem when trying to visit dashboards from new wato foldertree snapin
    * Chrome: Fixed styling problem of foldertree snapin
    * Views: Only show the commands and row selection options for views where
      commands are possible
    * The login mask honors the default_language definition now

1.1.13i3:
    Core, Setup, etc.:
    * *_contactgroups lists: Single group rules are all appended. When a list
      is found as a value this first list is used exclusively. All other
      matching rules are ignored
    * cmk -d does now honor --cache and --no-tcp
    * cmk -O/-R now uses omd re{start,load} core if using OMD